force-app/main/default/objects/Question_Response__c/fields/Assessment_Question__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Question</label>
    <referenceTo>Assessment_Question__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>Question_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>