force-app/main/default/objects/Question_Response__c/fields/Assessment_Response__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Response__c</fullName>
    <label>Assessment Response</label>
    <referenceTo>Assessment_Response__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>Question_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>