force-app/main/default/objects/Question_Response__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <formula>CASE(
    Response__c,
    0, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),
    5, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),
    IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <type>Text</type>
</CustomField>